@@ -4,20 +4,13 @@
 
 EAPI=5
 PYTHON_COMPAT=( jython2_7 pypy python2_7 )
-inherit elisp-common eutils python-single-r1
+EGIT_REPO_URI="git://github.com/google/styleguide.git"
+inherit elisp-common eutils git-r3 python-single-r1
 RESTRICT="mirror"
 
-SUBVERSION_REVISION="r=${PV}"
-HTML_VERSION="20140908"
-PY_VERSION="20141204"
-TXT_VERSION="20090627"
-EL_VERSION="20140929"
-DESCRIPTION="The google styleguide for C++ together with a verifyer and an emacs file"
-HOMEPAGE="http://code.google.com/p/google-styleguide/"
-SRC_URI="http://google-styleguide.googlecode.com/svn/trunk/cpplint/cpplint.py?${SUBVERSION_REVISION} -> cpplint-${PY_VERSION}.py
-	http://google-styleguide.googlecode.com/svn/trunk/cppguide.html?${SUBVERSION_REVISION} -> cpplint-${HTML_VERSION}.html
-	http://google-styleguide.googlecode.com/svn/trunk/cpplint/README?${SUBVERSION_REVISION} -> cpplint-${TXT_VERSION}.txt
-	emacs? ( http://google-styleguide.googlecode.com/svn/trunk/google-c-style.el?${SUBVERSION_REVISION} -> cpplint-${EL_VERSION}.el )"
+DESCRIPTION="The google styleguide together with cpplint and an emacs file"
+HOMEPAGE="https://github.com/google/styleguide"
+SRC_URI=""
 LICENSE="CC-BY-3.0"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
@@ -32,15 +25,9 @@ RDEPEND="dev-lang/python
 	${PYTHON_DEPS}
 	${COMMON}"
 
-S="${WORKDIR}"
-
-src_unpack() {
-	cp -- "${DISTDIR}/cpplint-${PY_VERSION}.py" cpplint.py || die
-	cp -- "${DISTDIR}/cpplint-${HTML_VERSION}.html" cppguide.html || die
-	cp -- "${DISTDIR}/cpplint-${TXT_VERSION}.txt" README || die
+src_prepare() {
 	if use emacs
-	then	cp -- "${DISTDIR}/cpplint-${EL_VERSION}.el" "${EMACSNAME}.el" || die
-		mkdir sitefile
+	then	mkdir sitefile
 		cat >"sitefile/50${EMACSNAME}-gentoo.el" <<EOF
 (add-to-list 'load-path "@SITELISP@")
 (autoload 'google-set-c-style "${EMACSNAME}"
@@ -53,12 +40,9 @@ src_unpack() {
 ;(add-hook 'c-mode-common-hook 'google-make-newline-indent)
 EOF
 	fi
-}
-
-src_prepare() {
 	use prefix || sed -i \
 		-e '1s"^#!/usr/bin/env python$"#!'"${EPREFIX}/usr/bin/python"'"' \
-		-- "${PN}.py" || die
+		-- "${S}/${PN}/${PN}.py" || die
 	python_fix_shebang "${S}"
 	epatch_user
 }
@@ -70,12 +54,16 @@ src_compile() {
 }
 
 src_install() {
-	dobin cpplint.py
-	dodoc README cppguide.html
+	dobin ${PN}/cpplint.py
+	dodoc ${PN}/README README.md
 	if use emacs
 	then	elisp-install "${EMACSNAME}" "${EMACSNAME}".{el,elc} || die
 		elisp-site-file-install "sitefile/50${EMACSNAME}-gentoo.el" "${EMACSNAME}" || die
 	fi
+	insinto /usr/share/vim/vimfiles/syntax
+	doins *.vim
+	insinto /usr/share/doc/${PF}/html
+	doins -r *.css *.html *.png *.xsl include
 }
 
 pkg_postinst() {
