@@ -1,1 +1,1 @@
-DIST squashmount-v10.1.0.tar.gz 57697 SHA256 bcb76cdb3764cd6c8c77a76f3b6b0691927e034c5691df99ce350f976d73934c SHA512 f0e1b811bac12e0d690db9205c7d52f9849da59c02ff8dc25855c41551050a532e46d0d17429b1fcb7f8ffafe022787c32f80402e0016c7ab1fb4809db3064d2 WHIRLPOOL 0456690ee26a347ea5aba5bd2647afe40dfccab829fa1b6c827369e50242e6eb1dc4e3daa4d6852041050ca998edc85633a25dfcb42e54eee82298a72adc1c7a
+DIST squashmount-v11.0.1.tar.gz 59208 SHA256 6861dc70791a7e1a803ce7404465423b3ed748f807db8d7589e9abef77bc42bd SHA512 8248a121638f086ddd3cfd2bdc42ca91153e434582bf81a51fc2aa4d335a41f4eabc65c4da5e5a28ec6ae78e843bc72eedbf8166353705cdb5fb22dda9e90817 WHIRLPOOL 906524e09ec2d2ae84c13c45ef5756763c316885360c71e8688d8ba66ce5ac6e91a2954711495ffa52edea51552180164295d2ed235c82d6d99ba84aee8b7651
