@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.22.xpi 546981 SHA256 0c6774cd5479a315253eb403c6a7c074658154630ac9c4bc481aa0aba6eb16a8 SHA512 039759140db003f913108c3efcf2e2f912e8832cee3d045aa75d77537dc93a3e86c48f1e585aa4f024835fba352f2fd0f6cec8241e96d7e63faf197d66b7fadb WHIRLPOOL 0666ade3e04de1bf1bb84bf656096859eb8112dcb2f9081326dbad0a0f6032a3a9d5f7256ead33bdc3f6e686395be51f2ee9b1784173d5c95fb7d2d66bf62c59
+DIST noscript-2.6.9.24.xpi 546549 SHA256 7f95fe893dfaca26ea35dde3b64cfc33e543dcc39f7d2e710c2998e7cb374610 SHA512 4d185e30af456f9fcaf289e684c7a400eb8a07458fbf0b22c787429653a1713159c48999f1b322ec9374c2f9fc69b6822fba154ddcf778b6b2f925b018b93fbb WHIRLPOOL 74d8899e8352d71d2b37adbdd0fae5365cecdef548a4a914b9bfd3702456747f8108260bd48f3a7a986c08d397672f57a88c182205b635e459644ff24706a574
